'断开连接后，自动关闭视图窗口'